--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-router-dom": "^4.3.1",
+    "react-slick": "^0.23.2",
+    "slick-carousel": "^1.8.1",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
